# ankan-analyser-server

./: Cargo.toml  Containerfile  README.md  sqlx-data.json
.sqlx/: query-06f0cbc878b1fe7e82f8a540b62c7bf19dd52738b961a1a0a706934fa8037872.json  query-0cf9a6bd2b8ee9f91435cd4f9f536268d7073f0d7084b7bdf03fa9a8ce63a978.json  query-0dc23062e23876e49192c70e9946319279ed50d9fe4a88cd1fce4a774e7a80dd.json  query-29d8124a8f2974b4fc0a9368ddf2dd97445ef26386d2efa560101449c6736e9f.json  query-466c7871dd51b78a8bce96c51b838d5a9468c1b162c71b52f12ead25f5f7f00c.json  query-56bd40667ba2d28b114d6505c70a4be9240a17950c0fc77e1467b55c078797b9.json  query-73b63f21ba26bb1c48fa303e705ee1c42a3c00324f849d7d60106f7e65e9fe94.json  query-7410ac7f6a4d37389a49268481c38dd6404e3287115f017985caf13c7fba40d5.json  query-78bdc6b4c032b04b2e4de8650857611f8fbd3dfe67f6e866cd000fbc2535aca9.json  query-827adf4f382184cef6a951d9cdeda88ccbc393b151eddc5af76f4cee7176fd9f.json  query-9ef49215c5fb0eb7db2bb4481cfc23805a62c6a9fd13410180364bb65e1af123.json  query-a3facfe89633fe79766f3f577e928e2777836a508535f67abd5b3c31a6853b9c.json  query-af113e97d3bf24eababe9b993feb159886c7b25078892c7aaea3023e90ed7ee3.json  query-afe3112034371fcb1bec939fe26e2d4521ffe830093773d0121a8f40622769ae.json  query-d18ab92b106abd1c6b773fa11c841f1cfca3e79ef1e9d727023bcacd590bf245.json  query-data.json  query-dfddf585eaa86877be3aacd3ed3ce7bc9fa2d144366aa531a4cab7422a735a5b.json  query-e175ec6ccbe37e938a0e555f333e0c2aee315402b96fa4dfd1531edd2624eb6a.json  query-e2e606e912899228ee021dc17dd04244400518bf3bff44cd15b1c55aa4ca495e.json  (+7 more)
doc/: html.txt
(+12 files in other folders)
