[package]
name = "ankan-meetup-analyser-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
reqwest = "0.12.19"
lazy_static = "1.5.0"
chrono = "0.4.41"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "json"] }
