[package]
name = "ankan-meetup-analyser-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.20", features = ["json"] }
lazy_static = "1.5.0"
chrono = { version = "0.4.41", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "json", "macros"] }
dotenv = "0.15.0"
scraper = "0.18.1"
regex = "1.10.4"
serde_json = "1.0.140"
